Revert "add group by 4, fix z-indexing on c-details"
This reverts commit e968d43a7c864151df708bb08c71149a819cf932.

--- a/styles/_classes.scss
+++ b/styles/_classes.scss
@@ -228,16 +228,16 @@ $class-remap: (
         }
       }
     }
-    .c-user-cell.self > .cell-box > .line {
+    .c-user-cell.self > .line {
         background-color: map-get($colors, 'line-self');
     }
-    .c-user-cell.self > .cell-box > .line > .line-box {
+    .c-user-cell.self > .line > .line-box {
         border-color: map-get($colors, 'line-self');
     }
-    .c-user-cell > .cell-box > .line {
+    .c-user-cell > .line {
         background-color: map-get($colors, 'line-others');
     }
-    .c-user-cell > .cell-box > .line .line-box {
+    .c-user-cell > .line .line-box {
         border-color: map-get($colors, 'line-others');
     }
   }
